--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "youtube-api-search": "0.0.5",
+    "youtube-search": "^1.0.4"
   }
 }
